--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,2 +1,17 @@
 @import "tailwindcss";
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+/* Hides scrollbar but keeps scroll functionality */
+.scroll-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+.scroll-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
+}
